# fl-oran-tmc

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  README_LOCAL.md  croissant.json  pyproject.toml
artifacts/: RESULTS_V3.md  RESULTS_V4.md
docs/: ADR-001-v5-tmc-paper-plan.md  ADR-002-phase6-fedswa.md  ADR-003-conditional-structure-program.md  FUTURE_STUDY.md  FUTURE_WORK_RESEARCH.md  MAMBA_SCAFFOLD_FULL_ABLATION.md  PAPER_5ARCH_EXTENSION_DRAFT.md  PAPER_CONTRIBUTION_CLAIM.md  PAPER_DRAFT.md  PAPER_DRAFT_REVIEW.md  PAPER_NOTES_MAMBA3.md  PAPER_NOTES_XLSTM.md  PAPER_S3_REVISION.md  PAPER_SECTION_SAM_FAMILY.md  PAPER_SEQ_INTEGRITY.md  PAPER_STATUS.md  PAPER_SUPPLEMENTARY.md  PAPER_V6_STAGE1.md  PREREG-A1-mechanism.md  PREREG-A2-deltaseq-law.md  README.md  RESULTS_DELTASEQ_LAW.md  RESULTS_V5_FINAL.md  RESULTS_V5_PRELIM.md  RESULTS_V6_STAGE1.md  RESULTS_V6_STAGE1_ANALYSIS.md  RESULTS_V7_PATH_D.md  RESULTS_V7_PHASE5.md  RESULTS_V7_SAM_FAMILY.md  SEQUENCE_INTEGRITY_CONFOUND.md  SEQUENCE_INTEGRITY_EVIDENCE.md  SEQUENCE_INTEGRITY_THEORY.md  TOMORROW_NVML_FEDDYN_PLAN.md  T_ABLATION_RESULTS.md  T_G_references_audit.md
experiments/: _audit_spiking_lr.py  run_moon_hpo.py  run_p1_centralized_lstm.py  run_p1_tr_embedding_check.py  run_p2_inference_latency.py  run_p2_loto_cluster_bootstrap.py  run_r2_post_hoc_per_bs_finetune.py  run_rem1_local_only_per_bs_lstm.py  run_v3_centralized.py  run_v3_fl_iid.py  run_v3_fl_noniid.py  run_v4_all_seeds.py  run_v5_algorithm_sweep.py  run_v5_sweep_matrix.py  run_v6_arch_sweep.py  run_v7_fl_arch_sweep.py  run_v7_fl_arch_sweep_matrix.py  (+1 more)
(+491 files in other folders)
