[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-oran"
version = "0.1.0"
description = "v5 FL algorithm sweep for IEEE TMC submission — Colosseum-ORAN slice SLA forecasting across FedAvg / FedProx / FedAdam / SCAFFOLD / FedDyn / MOON."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "thc1006", email = "hctsai1006@cs.nctu.edu.tw"}]
license = {text = "AGPL-3.0"}
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-xdist>=3"]

[project.scripts]
fl-oran = "fl_oran.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=src/fl_oran --cov-report=term-missing --cov-report=html:artifacts/coverage"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: tests that require a CUDA GPU",
]

[tool.coverage.run]
branch = true
source = ["src/fl_oran"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
